# X-TODO

./: AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  size-badge.json
.github/workflows/: build.yml
docs/: calendar-week-month-plan.md  testing.md
docs/conventions/: calendar.md  capsule-and-taskbar.md  capsule.md  dialogs-and-menus.md  multilevel-lists.md  settings-and-backup.md  surface-rendering.md  theme-system.md  window-hittest-and-geometry.md
src/: CalendarDate.cpp  CalendarDate.h  CalendarLayout.cpp  CalendarLayout.h  I18n.cpp  I18n.h  MainWindow.cpp  MainWindow.h  MainWindowTaskbar.cpp  MainWindowView.cpp  MenuModel.cpp  MenuModel.h  SettingsWindow.cpp  SettingsWindow.h  Store.cpp  Store.h  StoreFormat.cpp  StoreFormat.h  Theme.h  ThemeManagerWindow.cpp  ThemedWindowControls.cpp  ThemedWindowControls.h  TodoModel.cpp  TodoModel.h  ViewLayout.cpp  ViewLayout.h  main.cpp
tests/: CMakeLists.txt  calendar_date_property_tests.cpp  calendar_date_tests.cpp  calendar_layout_property_tests.cpp  calendar_layout_tests.cpp  calendar_model_property_tests.cpp  gui_contract_tests.cpp  i18n_tests.cpp  store_format_hardening_tests.cpp  store_format_tests.cpp  todo_model_property_tests.cpp  todo_model_tests.cpp
